--- a/src/404error.css
+++ b/src/404error.css
@@ -1,18 +1,35 @@
-.goBackHome {
-    position: relative;
-    top: 44em;
+
+#err404img {
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
-button {
-    width: 10em;
-    height: 2.5em;
-    background: lightblue;
-    font-weight: bold;
+img {
+    width: 100%;
+}
+
+.errCode {
+    font-weight: bolder;
+}
+
+.sorryMessage {
+    color: darkred;
     font-size: 1.5em;
 }
 
+.goBackHomeLink {
+    width: 20%;
+    margin: 0 auto;
+    color: orangered;
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 1em;
+}
+
 @media screen and (min-width: 320px) and (max-width: 1400px) {
-    .goBackHome{
+    .goBackHomeLink{
         position: relative;
         top: 23em;
     }
